# personal-page

./: LICENSE.md  README.md  manage.py  pyproject.toml
main/: admin.py  models.py  views.py
main/migrations/: 0001_initial.py  0002_command_help_text.py  0003_auto_20200709_2343.py
main/templates/: layout.html
personal_page/: asgi.py  settings.py  urls.py  widgets.py  wsgi.py
static/css/: style.css
