[tool.poetry]
name = "personal_page"
version = "0.1.0"
description = "Just my personal page"
authors = ["Nikita Y. <fmajesty@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
django-environ = "^0.4.5"
django-admin-honeypot = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
